<resources>
    <string name="app_name">Weather App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="txt_ivan_martinez">Ivan Martinez</string>
    <string name="txt_london_uk">London, UK</string>
    <string name="txt_imagebutton">ImageButton</string>
    <string name="txt_united_kingdom">United Kingdom</string>
    <string name="txt_madrid_es">Madrid, ES</string>
    <string name="txt_spain">Spain</string>
    <string name="txt_new_city">New City</string>
    <string name="txt_setting">Setting</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_21">21º</string>
    <string name="txt_feels_like_21">feels like 21º</string>
    <string name="txt_imageview">ImageView</string>
</resources>