<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_500dp"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/_20dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/_40dp"
            android:layout_height="@dimen/_40dp"
            android:src="@drawable/ivan"
            />
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_ivan_martinez"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginBottom="@dimen/_8dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_200dp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/london"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            android:background="@color/white"
            android:src="@drawable/ic_location"
            android:contentDescription="@string/txt_imagebutton" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_london"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_london_uk"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_16sp"
                android:layout_marginStart="@dimen/_4dp"
                />
            <TextView
                android:id="@+id/tv_sub_london"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_united_kingdom"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_16sp"
                android:layout_marginStart="@dimen/_4dp"
                android:layout_marginBottom="@dimen/_8dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/spain"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            android:background="@color/white"
            android:src="@drawable/ic_location"
            android:contentDescription="@string/txt_imagebutton" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_spain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_madrid_es"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_16sp"
                android:layout_marginStart="@dimen/_4dp"
                />
            <TextView
                android:id="@+id/tv_sub_spain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_spain"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_16sp"
                android:layout_marginStart="@dimen/_4dp"
                android:layout_marginBottom="@dimen/_8dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/ib_create"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            android:background="@color/white"
            android:src="@drawable/ic_plus"
            android:contentDescription="@string/txt_imagebutton" />
            <TextView
                android:id="@+id/tv_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_new_city"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_16sp"
                android:layout_marginStart="@dimen/_4dp"
                />
    </LinearLayout>
</LinearLayout>